# dify-official-plugins

tools/dify_extractor_neu/: manifest.yaml  pyproject.toml
tools/dify_extractor_neu/tools/: dify_extractor.py
tools/parent_child_chunk/tools/index_processor/: parent_child_index_processor.py
tools/parent_child_chunk_llm/: README.md  manifest.yaml  pyproject.toml
tools/parent_child_chunk_llm/doc/: design.md  markdown_chunk_design.md
tools/parent_child_chunk_llm/provider/: parent_child_chunk.yaml
tools/parent_child_chunk_llm/tools/: parent_child_chunk.py  parent_child_chunk.yaml
tools/parent_child_chunk_llm/tools/splitter/: fixed_text_splitter.py  text_splitter.py
