[project]
name = "parent_child_chunk_llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dify_plugin>=0.9.0",
    "pydantic>=2.13.4",
    "tiktoken>=0.13.0",
    "transformers>=5.9.0",
]

# uv run black . -C -l 100 && uv run ruff check --fix
[dependency-groups]
dev = []
